# cppbasics

./: .gitignore  CMakeLists.txt  CPackMultiConfig.cmake  CTestConfig.cmake  LICENCE  README.md  cmake.hpp.in  functions.cpp  functions.hpp  main.cpp  myclass.cpp  myclass.hpp  mystruct.cpp  mystruct.hpp
lib/echo/: CMakeLists.txt  echo.cpp  echo.hpp
lib/math/: CMakeLists.txt  math.hpp  sqrt.cpp  sqrt_table.cpp
std/: io.cpp  std.hpp
